@@ -265,6 +265,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
      - Canon inkjet printers:
 
+       Canon PIXMA i50    (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
        Canon PIXMA iP3600 (EXPERIMENTAL)
        Canon PIXMA iP3500 (EXPERIMENTAL)
